--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2023-03-19" />
 
-<title>Carlos Estevez’s website and data science work and projects</title>
+<title>Carlos Estevez’s Website Datascience</title>
 
 <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -263,118 +263,28 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Carlos Estevez’s website and data science
-work and projects</h1>
+<h1 class="title toc-ignore">Carlos Estevez’s Website Datascience</h1>
 <h4 class="author">Carlos Estevez</h4>
 <h4 class="date">2023-03-19</h4>
 
 </div>
 
 
-<style>
-body {
-  background-color: azure;
-}
-</style>
-<div class="alert alert-dismissible alert-info">
-<img src="biopic.PNG" alt="Biography" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);height: 180px;width: 150px;">
+<div class="alert alert-dismissible alert-warning">
 <h3>
-<strong>Biography</strong>
+<strong>About Me</strong>
 </h3>
-<div style="text-align: justify;text-justify: inter-word;">
-<p>My name is Carlos Estevez. I am from the Dominican Republic. I love
-sports specially baseball, basketball and playing chess. During the
-weekend I like spending time with my family and I also love going to the
-movies with my friends.</p>
-I have a bachelor’s degree in System and Telecommunication Engineering
-and I also have a master degree in supply chain in the TEC(Tecnologico
-Monterrey Mexico). <br>The other tabs represent work / analyses that I
-have completed.</br>
-</div>
-</div>
-<div class="alert alert-dismissible alert-info">
-<img src="deep.jpg" alt="Deep Blue" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);height: 180px;width: 150px;">
-<h3>
-<strong>Interests</strong>
-</h3>
-<div style="text-align: justify;text-justify: inter-word;">
-<p>From an early age, I’ve wanted to pursue a career within the
-computing industry. Computers have always given me a platform to
-emphasize my creativity and increase my general knowledge.</p>
-<p>When I was four years old my father gave me a wooden chess game. I
-was attracted by chess right away, I learned how to move the pieces on
-the chess board and eventually, I acquired the knowledge of playing the
-game(At least a basic level). I was fascinated by the game of chess, and
-the different strategies and plans you need to elaborate to defeat your
-opponent. I became involved very rapidly reading plenty of books,
-especially books written by Bobby Fisher. Being involved in the game of
-chess was very convenient to me since I became fascinated with other
-related topics that will be convenient for my future career like
-mathematics and statistics.</p>
-My interest in computer science began when I was twelve years old
-watching a chess game between Gary Kasparov and IBM Chess Computer: Deep
-Blue(A chess-playing expert system run on a unique purpose-built IBM
-supercomputer). I was awed by Deep Blue in terms of analyzing the
-different strategies and choosing the best possible play, it seemed that
-Deep Blue was really thinking. At the end of the match, Deep Blue beat
-Kasparov and from that point, I fell in love with computers. At that
-time, I had a friend whose father by the way was working at IBM. He
-invited me to his house one summer and I told him that I wanted to
-program computers and solve real-life problems. He told me that I had to
-learn how computers work and more importantly, how to instruct computers
-on what to do. After that, He gave me two books: C Programming Language
-by Dennis Ritchey and Design Patterns: Elements of Reusable
-Object-Oriented Software by the “Gang of Four”. I learned the
-foundations of computer science including how to write programs, how to
-compile them, designing programs using the less possible computer
-resources, and how to develop an application using design patterns and
-Oriented Object Programming.
-</div>
-</div>
-<div class="alert alert-dismissible alert-info">
-<img src="sap.png" alt="SAP" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);height: 180px;width: 150px;">
-<h3>
-<strong>Professionally</strong>
-</h3>
-<div style="text-align: justify;text-justify: inter-word;">
-
-
-<p>I am a Business Data Analyst and Developer with several years of
-experience identifying efficiencies and problem areas within data
-streams. I have applied my expertise in several companies improving
-their operation and processes and in some of them even improving their
-financial situation substantially. I have a bachelor’s degree in System
-and Telecommunication Engineering.</p>
-<p>I began my career as a Software Developer managing different
-technologies that served as a foundation to create feasible software and
-applications for several organizations.</p>
-Technologies:
-<ul>
-<li>
-Programming languages: JAVA(JSE,JEE), C, R, Python, HTML, JavaScript,
-CSS
-<li>
-Databases: PostgreSQL, MySQL, Oracle, Oracle Spatial
-<li>
-Frameworks: Spring, Hibernate, Structs
-<li>
-Design Frameworks: OPP(Oriented Programming Language), UML, and
-RUP(Rational Unified Process)
-<li>
-Data structures(Python, R, JAVA)
-</ul>
-<p>I have been involved in the development of different types of
-software such as: ERPs(Enterprise Resource Planning), Demand and Supply
-Planning, MRP, and Forecast. Production Planning and Transportation
-Planning. To implement these applications, I’ve learned different
-technologies and statistical topics, and programming languages. I also
-have expertise in SAP. I am an ABAP Developer and I know other SAP
-analytical modules. In SAP, I was able to apply my expertise as Data
-Analyst and as a Technical and Business Consultant. Now, I posses six
-SAP certifications in different modules and additionally I have
-completed many implementations in different companies specially using my
-developing and statistical skills</p>
-</div>
+<p>In this EDA(Exploratory Data Analysis) we will conduct an analysis of
+beers sold across the United States. In addition, we will show deep
+analysis across different beer names, styles, and companies to shed more
+light into some of the weakness and advantages of certain business
+strategies.</p>
+<p>This analysis will be presented to the Budweiser corporation. We will
+analyze and investigate data sets and summarize their main
+characteristics, often employing data visualization methods to be more
+compressive. Our main goal will be to recognize the areas where the
+company can focus aiming to strengthen its position in the market and
+ultimately translate these benefits to the final customer.</p>
 </div>
 
 
