--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2023-03-19" />
 
-<title>Carlos Estevez’s website and data science work and projects</title>
+<title>index.knit</title>
 
 <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -263,10 +263,6 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Carlos Estevez’s website and data science
-work and projects</h1>
-<h4 class="author">Carlos Estevez</h4>
-<h4 class="date">2023-03-19</h4>
 
 </div>
 
@@ -277,6 +273,11 @@ body {
 }
 </style>
 <div class="alert alert-dismissible alert-info">
+<br>
+<h2>
+<strong>Carlos Estevez’s website, data science work and
+projects</strong>
+</h2>
 <img src="biopic.PNG" alt="Biography" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);height: 180px;width: 150px;">
 <h3>
 <strong>Biography</strong>
