--- a/index.html
+++ b/index.html
@@ -251,6 +251,9 @@ $(document).ready(function () {
 <li>
   <a href="EDA_Beer_Study.html">Beer Study</a>
 </li>
+<li>
+  <a href="CaseStudy2DDS.html">Employee Attrition Study</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
