--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@ $(document).ready(function () {
 <li>
   <a href="CaseStudy2DDS.html">Employee Attrition Study</a>
 </li>
+<li>
+  <a href="Project_Paper.pdf">House Price Prediction</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
